# the-polls-api-main

./: .gitignore  README.md  config.py  handler.py  main.py  pyproject.toml  requirements.txt  table_relation.md  test_code.py  test_redis.py  test_time_vn.py
app/api/: danger.py  polls.py  votes.py
app/exceptions/: custom_all.py  custom_validation.py
app/models/: Choice.py  Polls.py  Results.py  Votes.py  test_polls.py
app/schemas/: vote.py
app/services/: utils.py
app/utils/: timezones.py
backup/: main-test-redis.py
giai_thich_code/: get_poll_results.md  get_vote_count.md  handler.md
